<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datailschool.DetailSchool">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >
        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school_name"
            android:layout_below="@+id/text_view_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/text_view_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_view_name"
            android:text="@string/dbn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

        <TextView
            android:id="@+id/text_view_sat_examination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examination"
            android:layout_marginRight="25dp"
            android:layout_toStartOf="@+id/text_view_cantidad"
            android:layout_below="@id/text_view_name"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/text_view_lectura_critica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_view_sat_examination"
            android:text="@string/dbn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

        <TextView
            android:id="@+id/text_view_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lectura_critica"
            android:layout_marginRight="25dp"
            android:layout_toStartOf="@+id/text_view_cantidad"
            android:layout_below="@id/text_view_sat_examination"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/text_view_math_puntuaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_view_website"
            android:text="@string/dbn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_toStartOf="@+id/text_view_cantidad"
            android:text="@string/school_math_puntuaje"
            android:layout_below="@id/text_view_website"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/text_view_writing_puntaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_view_math_puntuaje"
            android:text="@string/dbn"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

        <TextView
            android:id="@+id/text_view_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_toStartOf="@+id/text_view_cantidad"
            android:text="@string/school_math_puntuaje"
            android:layout_below="@id/text_view_math_puntuaje"
            android:ellipsize="end"
            />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>